[gd_scene load_steps=12 format=3 uid="uid://da3o35be5tlls"]

[ext_resource type="Texture2D" uid="uid://cn08dfnwjafyb" path="res://assets/backgrounds/bg1.png" id="1_cpr0p"]
[ext_resource type="Script" uid="uid://d0lvpiciudhoe" path="res://scenes/Game.gd" id="1_g4kob"]
[ext_resource type="Texture2D" uid="uid://t4jqvvdv7oux" path="res://assets/party.png" id="2_s0nni"]
[ext_resource type="Texture2D" uid="uid://b4l4ffgp7b2c5" path="res://assets/abilities/ab_arrow.png" id="5_400sg"]
[ext_resource type="Texture2D" uid="uid://dimpxbwpop3dg" path="res://assets/abilities/ab_shield.png" id="6_g4kob"]
[ext_resource type="Texture2D" uid="uid://c3do82b6a4b5m" path="res://assets/abilities/ab_concentration.png" id="7_qy1jj"]
[ext_resource type="FontFile" uid="uid://djrh33maalos0" path="res://assets/font/Rowdy-Regular.ttf" id="8_3xj3m"]
[ext_resource type="PackedScene" uid="uid://lwpk86seugi6" path="res://nodes/PartyAbility.tscn" id="9_qy1jj"]
[ext_resource type="Theme" uid="uid://b7cthgu27d0tc" path="res://ThemeUI.tres" id="10_3xj3m"]
[ext_resource type="PackedScene" uid="uid://oc1ia3anhg10" path="res://nodes/PowerGem.tscn" id="12_mcffj"]
[ext_resource type="PackedScene" uid="uid://c4tbv7x06y4rc" path="res://nodes/TargetChosser.tscn" id="13_2rd6h"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g4kob")

[node name="CLBG" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="CLBG"]
modulate = Color(0.67069, 0.67069, 0.67069, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_cpr0p")
expand_mode = 1

[node name="ImageParty" type="TextureRect" parent="CLBG"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 357.0
offset_right = -764.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_s0nni")
expand_mode = 1

[node name="Defiances" type="Control" parent="."]
anchors_preset = 0

[node name="Abilities" type="Control" parent="."]
anchors_preset = 0

[node name="Ab1" type="TextureRect" parent="Abilities"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_left = 22.0
offset_top = 396.0
offset_right = 82.0
offset_bottom = 456.0
texture = ExtResource("5_400sg")
expand_mode = 1

[node name="Ab2" type="TextureRect" parent="Abilities"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_left = 31.0
offset_top = 318.0
offset_right = 91.0
offset_bottom = 378.0
texture = ExtResource("6_g4kob")
expand_mode = 1

[node name="Ab3" type="TextureRect" parent="Abilities"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_left = 117.0
offset_top = 297.0
offset_right = 177.0
offset_bottom = 357.0
texture = ExtResource("7_qy1jj")
expand_mode = 1

[node name="Ab4" type="TextureRect" parent="Abilities"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_left = 11.0
offset_top = 247.0
offset_right = 71.0
offset_bottom = 307.0
texture = ExtResource("5_400sg")
expand_mode = 1

[node name="Ab5" type="TextureRect" parent="Abilities"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_left = 104.0
offset_top = 216.0
offset_right = 164.0
offset_bottom = 276.0
texture = ExtResource("6_g4kob")
expand_mode = 1

[node name="Ab6" type="TextureRect" parent="Abilities"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_left = 198.0
offset_top = 214.0
offset_right = 258.0
offset_bottom = 274.0
texture = ExtResource("7_qy1jj")
expand_mode = 1

[node name="Ab7" type="TextureRect" parent="Abilities"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_left = 210.0
offset_top = 288.0
offset_right = 270.0
offset_bottom = 348.0
texture = ExtResource("5_400sg")
expand_mode = 1

[node name="Ab8" type="TextureRect" parent="Abilities"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_left = 24.0
offset_top = 169.0
offset_right = 84.0
offset_bottom = 229.0
texture = ExtResource("6_g4kob")
expand_mode = 1

[node name="Ab9" type="TextureRect" parent="Abilities"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_left = 123.0
offset_top = 148.0
offset_right = 183.0
offset_bottom = 208.0
texture = ExtResource("7_qy1jj")
expand_mode = 1

[node name="PartyAbility" parent="Abilities" instance=ExtResource("9_qy1jj")]
offset_left = 231.0
offset_top = 367.0
offset_right = 291.0
offset_bottom = 427.0

[node name="TextBox" type="ColorRect" parent="."]
layout_mode = 1
offset_left = 1.0
offset_top = 591.0
offset_right = 374.0
offset_bottom = 649.0
color = Color(0.201527, 0.201527, 0.201527, 1)

[node name="Value" type="Label" parent="TextBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.851769, 0.851769, 0.851769, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("8_3xj3m")
theme_override_font_sizes/font_size = 18
text = "F2   D2   S1         HP 20/20     PW  3/3
ORO 55G       PRESTIGIO 4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Items" type="HBoxContainer" parent="."]
modulate = Color(0.538549, 0.436655, 1, 1)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Item1" type="TextureRect" parent="Items"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("6_g4kob")
expand_mode = 1

[node name="Item2" type="TextureRect" parent="Items"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("6_g4kob")
expand_mode = 1

[node name="Item3" type="TextureRect" parent="Items"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("6_g4kob")
expand_mode = 1

[node name="Item4" type="TextureRect" parent="Items"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("6_g4kob")
expand_mode = 1

[node name="Item5" type="TextureRect" parent="Items"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("6_g4kob")
expand_mode = 1

[node name="Item6" type="TextureRect" parent="Items"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("6_g4kob")
expand_mode = 1

[node name="Item7" type="TextureRect" parent="Items"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("6_g4kob")
expand_mode = 1

[node name="Item8" type="TextureRect" parent="Items"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("6_g4kob")
expand_mode = 1

[node name="BtnAddDice" type="Button" parent="."]
layout_mode = 0
offset_left = 495.0
offset_top = 556.0
offset_right = 624.0
offset_bottom = 594.0
theme = ExtResource("10_3xj3m")
text = "ADD RND DICE"

[node name="BtnEndTurn" type="Button" parent="."]
layout_mode = 0
offset_left = 495.0
offset_top = 603.0
offset_right = 624.0
offset_bottom = 641.0
theme = ExtResource("10_3xj3m")
text = "END TURN"

[node name="Dices" type="CanvasLayer" parent="."]

[node name="Hint" type="CanvasLayer" parent="."]

[node name="HintPanel" type="ColorRect" parent="Hint"]
visible = false
offset_right = 324.0
offset_bottom = 151.0
mouse_filter = 2
color = Color(0.0994934, 0.158719, 0.0926439, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="Hint/HintPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 7.0
offset_right = -8.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
bbcode_enabled = true
text = "aasd [color=red] asd[/color]aasd [color=red] asd[/color]aasd [color=red] asd[/color]aasd [color=red] asd[/"
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="CLUI" type="CanvasLayer" parent="."]

[node name="PowerGem" parent="CLUI" instance=ExtResource("12_mcffj")]
offset_left = 386.0
offset_top = 592.0
offset_right = 386.0
offset_bottom = 592.0

[node name="TargetChosser" parent="CLUI" instance=ExtResource("13_2rd6h")]
visible = false

[node name="InputBlocker" type="Control" parent="CLUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CLUI/InputBlocker"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="C1" type="ColorRect" parent="CLUI/InputBlocker"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 7.0
grow_horizontal = 2
color = Color(0.572549, 0.572549, 0.572549, 0.560784)

[node name="C2" type="ColorRect" parent="CLUI/InputBlocker"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.572549, 0.572549, 0.572549, 0.560784)
